--- a/main.html
+++ b/main.html
@@ -14,23 +14,20 @@
         <label for="email">Email*</label>
         <input type="email" id="email" name="email" required><br><br>
 
-        <label>Gender*</label><br>
+        <label for="gander">Gender*</label><br>
         <input type="radio" id="male" name="gender" value="male" required>
         <label for="male">Male</label><br>
         <input type="radio" id="female" name="gender" value="female" required>
         <label for="female">Female</label><br>
         <input type="radio" id="other" name="gender" value="other" required>
         <label for="other">Other</label><br><br>
-
-
-		 <label for="laptop">Laptop Brands</label>
+		<label for="laptop">Laptop Brands</label>
         <select id="laptop" name="laptop">
             <option value="apple">Apple</option>
             <option value="asus">Asus</option>
             <option value="hp">HP</option>
         </select><br><br>
-
-        <label for="age">Age*</label>
+		<label for="age">Age*</label>
         <input type="number" id="age" name="age" required><br><br>
 
         <label for="dob">Date of Birth*</label>
